# ASI_PROJ

./: Dockerfile  README.md  pyproject.toml  requirements_old.txt
.devcontainer/: devcontainer.json
conf/base/: parameters_data_processing.yml
freelancers/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  stats.json
freelancers/AutogluonModels/ag-20250614_104013/: learner.pkl  predictor.pkl
freelancers/AutogluonModels/ag-20250614_104013/models/: trainer.pkl
freelancers/AutogluonModels/ag-20250614_104013/models/CatBoost/: model.pkl
freelancers/AutogluonModels/ag-20250614_104013/models/LightGBMXT/: model.pkl
freelancers/AutogluonModels/ag-20250614_104013/models/WeightedEnsemble_L2/: model.pkl
freelancers/AutogluonModels/ag-20250614_104013/utils/data/: X.pkl  X_val.pkl  y_val.pkl
freelancers/AutogluonModels/ag-20250614_104058/: learner.pkl  metadata.json
freelancers/AutogluonModels/ag-20250614_104058/models/: trainer.pkl
freelancers/AutogluonModels/ag-20250614_104058/models/CatBoost/: model.pkl
freelancers/conf/base/: catalog.yml  parameters_data_science.yml
freelancers/datasets/: freelancer_earnings_bd.csv
freelancers/models/autogluon_model/: predictor.pkl
freelancers/models/autogluon_model/models/: trainer.pkl
freelancers/src/freelancers/: __init__.py  __main__.py
models/autogluon_model/: learner.pkl  metadata.json
models/autogluon_model/models/LightGBMXT/: model.pkl
models/autogluon_model/utils/data/: X.pkl  y.pkl
src/freelancers/: settings.py
src/freelancers/pipelines/reporting/: nodes.py
(+22 files in other folders)
