[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12,<3.13"
version = "1.0.0"
name = "freelancers"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "secure==0.3", "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro[jupyter]~=0.19.12", "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0", "kedro-viz>=6.7.0", "scikit-learn~=1.5.1", "seaborn~=0.12.1", "autogluon==1.2", "pandas==2.2.3"]

[project.scripts]
freelancers = "freelancers.__main__:main"

[tool.kedro]
package_name = "freelancers"
project_name = "freelancers"
kedro_init_version = "0.19.12"
tools = "['Data Structure']"
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "freelancers.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "1aa6b720193d4c15a06d9a448dbbf010"
